# r2t2

./: .gitignore  Cargo.toml  rustfmt.toml
src/: ftdc.rs  gui.rs  main.rs  metric.rs
src/ftdc/: decode.rs  error.rs  key.rs
src/gui/: auto_size.rs  chart.rs  layout.rs  main_window.rs  menu.rs
src/gui/chart/: draw.rs  widget.rs
src/metric/: key.rs  time.rs
